--- a/extension/package.json
+++ b/extension/package.json
@@ -25,12 +25,13 @@
     "type": "git",
     "url": "https://github.com/rahul-roy-glean/vscode-bazel-extension"
   },
-  "icon": "icon.png",
   "activationEvents": [
     "workspaceContains:**/BUILD",
     "workspaceContains:**/BUILD.bazel",
     "workspaceContains:**/WORKSPACE",
-    "workspaceContains:**/WORKSPACE.bazel"
+    "workspaceContains:**/WORKSPACE.bazel",
+    "onLanguage:bazel",
+    "onCommand:bazel.build"
   ],
   "main": "./out/extension.js",
   "contributes": {
